feat: Add sidebar resizing and color customization to all templates; fix CorporateBlue bugs

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CVBuilder Pro - Creador de Currículums Profesionales</title>
     <meta name="description" content="Crea tu CV profesional en minutos con nuestras plantillas optimizadas para ATS. Diseño moderno, consejos de expertos y exportación PDF gratuita. Aumenta tus oportunidades laborales hoy." />
